--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "cuid": "^2.1.8",
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
