--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "mongoose": "^5.12.1",
-    "socket.io": "^3.1.2"
+    "socket.io": "^3.1.2",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
